--- a/index.html
+++ b/index.html
@@ -97,56 +97,56 @@
         <div class="box">
             <div class="box-content">
                 <h2>Clothes</h2>
-            <div class="box-image" style="background-image: url(box1_image.jpg);"></div>
+            <div class="box-image" style="background-image: url(Images/box1_image.jpg);"></div>
             <p>see more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-            <div class="box-image" style="background-image: url(box2_image.jpg);"></div>
+            <div class="box-image" style="background-image: url(Images/box2_image.jpg);"></div>
             <p>see more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Furniture</h2>
-            <div class="box-image" style="background-image: url(box3_image.jpg);"></div>
+            <div class="box-image" style="background-image: url(Images/box3_image.jpg);"></div>
             <p>see more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Electronics</h2>
-            <div class="box-image" style="background-image: url(box4_image.jpg);"></div>
+            <div class="box-image" style="background-image: url(Images/box4_image.jpg);"></div>
             <p>see more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Beauty picks</h2>
-            <div class="box-image" style="background-image: url(box5_image.jpg);"></div>
+            <div class="box-image" style="background-image: url(Images/box5_image.jpg);"></div>
             <p>see more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Pet Care</h2>
-            <div class="box-image" style="background-image: url(box6_image.jpg);"></div>
+            <div class="box-image" style="background-image: url(Images/box6_image.jpg);"></div>
             <p>see more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>New Arrival in Toys</h2>
-            <div class="box-image" style="background-image: url(box7_image.jpg);"></div>
+            <div class="box-image" style="background-image: url(Images/box7_image.jpg);"></div>
             <p>see more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Discover Fashion Trends</h2>
-            <div class="box-image" style="background-image: url(box8_image.jpg);"></div>
+            <div class="box-image" style="background-image: url(Images/box8_image.jpg);"></div>
             <p>see more</p>
             </div>
         </div>
@@ -211,6 +211,8 @@
             </div>
             <div class="copyright">
                 © 1996-2025, Amazon.com, Inc. or its affiliates
+                
+                        <p>gh-ravikmr</p>
             </div>
         </div>
     </footer>
